--- a/gestionnaireAnnuaire/WebContent/WEB-INF/web.xml
+++ b/gestionnaireAnnuaire/WebContent/WEB-INF/web.xml
@@ -1,33 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>gestionnaireAnnuaire</display-name>
-  
-  
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-  </welcome-file-list>
-  
-  <!-- 
-  <display-name>gestionnaire</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
 
-	
+	<display-name>test-mvc</display-name>
+
 	<servlet>
-		<servlet-name>Connexion</servlet-name>
-		<servlet-class>fr.gestionnaire.servlet.Servlet</servlet-class>
+		<servlet-name>springapp</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
-		<servlet-name>Connexion</servlet-name>
-		<url-pattern>/connexionUser</url-pattern>
+		<servlet-name>springapp</servlet-name>
+		<url-pattern>/actions/*</url-pattern>
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
-	
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>	
-  
-  
-   -->
+	</welcome-file-list>
 </web-app>
