--- a/gestionnaireAnnuaire/pom.xml
+++ b/gestionnaireAnnuaire/pom.xml
@@ -72,6 +72,13 @@
 			<artifactId>taglibs-standard-impl</artifactId>
 			<version>1.2.5</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.3.2.Final</version>
+		</dependency>
 
 
 	</dependencies>
